# proc-macro-tool-rs

./: Cargo.toml  README.md  lib.rs
src/: exts.rs  func_utils.rs  kind.rs  lib.rs  parse_iter.rs  span.rs
testit/: Cargo.toml
testit/src/: lib.rs
testit/testit-proc_macro/: Cargo.toml
testit/testit-proc_macro/src/: lib.rs  tests.rs
