[package]
name = "proc-macro-tool"
version = "0.8.21"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["proc-macro", "macros"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
description = "Some common simple tool for proc-macro impl"

license = "MIT"
repository = "https://github.com/A4-Tacks/proc-macro-tool-rs"
readme = "README.md"

[workspace]
members = [
    "testit",
    "testit/testit-proc_macro",
]

[dependencies]
